--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>FENERLIYSEN DOLDUR</title>
 </head>
 <body>
-    <img src="fener.png" style="width: 10vw; height: auto">
+    <img src="fener.png" style="width: 10vmax; height: auto">
     <h1 style="font: ;">FENERLİ KARDEŞİM LÜTFEN DOLDUR</h1>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfzDbRcKfOVKahlbJiQkYw8GFGHjAzZngCoY571xGGxwtoeew/viewform?embedded=true" width="100%" height="2336" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 </body>
